--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+img_product/29012017190054.jpg
+img_product/29012017191807.jpg
+img_product/29012017191846.jpg
+img_product/29012017192109.jpg
