--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ img_product/29012017190054.jpg
 img_product/29012017191807.jpg
 img_product/29012017191846.jpg
 img_product/29012017192109.jpg
+class/class_conexion.php
