--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ img_product/29012017191807.jpg
 img_product/29012017191846.jpg
 img_product/29012017192109.jpg
 class/class_conexion.php
+class/class_conexion.php
+class/class_conexion.php
