--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@ img_product/29012017192109.jpg
 class/class_conexion.php
 class/class_conexion.php
 class/class_conexion.php
+class/class_conexion.php
+class/class_ini1.php
+class/class_conexion.php
